--- a/app/globals.css
+++ b/app/globals.css
@@ -34,11 +34,21 @@ body {
 
 @layer components {
   .nav-btn {
-    @apply outline outline-white px-16 py-2 rounded-lg bg-blue-300 hover:bg-blue-400;
+    @apply outline outline-white px-16 py-2 rounded-lg bg-blue-300 hover:bg-blue-400 hover:text-white;
   }
   .dropdown-button {
     @apply underline;
   }
-
+  .embla {
+    overflow: hidden;
+  }
+  .embla__container {
+    display: flex;
+  }
+  .embla__slide {
+    flex: 0 0 30%;
+    min-width: 400px;
+    padding: 8px;
+  }
   
 }
